--- a/app/src/main/res/layout-h1024dp/languages_dialog.xml
+++ b/app/src/main/res/layout-h1024dp/languages_dialog.xml
@@ -1,198 +1,289 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootview"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    >
-    <RelativeLayout
+    android:alpha="0.8"
+    android:background="@color/black">
+
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"
-        android:alpha="0.8"
-        >
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        >
+        android:layout_marginBottom="20dp"
+        android:layout_below="@id/exit_container"
+        android:fillViewport="true">
 
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical">
-
-
-              <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="@string/select_a_language"
-                  android:textSize="22sp"
-                  android:textColor="@color/white"
-                  android:textStyle="bold"
-                  android:layout_marginTop="50dp"
-                  android:layout_gravity="center_horizontal"
-                  android:fontFamily="@font/montserrat"/>
-
-        <RelativeLayout
-            android:id="@+id/english_language"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:elevation="5dp"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/flag"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/united_kingdom"
-                    />
-
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:gravity="center|top"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/theme_txt_default"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/english"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/select_a_language"
                 android:textColor="@color/white"
-                android:textSize="18sp"
-                android:layout_marginLeft="10dp"
-                android:fontFamily="@font/arimo"
-                android:layout_gravity="center_vertical"/>
-            </LinearLayout>
-            <ImageView
-                android:orientation="vertical"
-                android:layout_width="match_parent"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/arabic_language"
+                android:layout_width="291dp"
                 android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/ic_hexnow"
-                app:tint="@color/purple_500"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
 
-                />
-        </RelativeLayout>
-          <RelativeLayout
-              android:id="@+id/french_language"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-              <LinearLayout
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_centerInParent="true"
-                  android:elevation="5dp"
-                  android:orientation="horizontal">
-                  <ImageView
-                      android:id="@+id/flag_2"
-                      android:layout_width="48dp"
-                      android:layout_height="48dp"
-                      android:src="@drawable/france"
-                      />
+                <ImageView
+                    android:id="@+id/arab_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/arab" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/arabic"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="@string/french"
-                      android:textColor="@color/white"
-                      android:textSize="18sp"
-                      android:layout_marginLeft="10dp"
-                      android:fontFamily="@font/arimo"
-                      android:layout_gravity="center_vertical"/>
-              </LinearLayout>
-              <ImageView
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="50dp"
-                  android:layout_margin="10dp"
-                  android:id="@+id/default_theme"
-                  android:src="@drawable/ic_hexnow"
-                  app:tint="@color/purple_500"
+            </LinearLayout>
 
-                  />
-          </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/english_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
 
-          <RelativeLayout
-              android:id="@+id/spanish_language"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/united_kingdom" />
 
-              <LinearLayout
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_centerInParent="true"
-                  android:elevation="5dp"
-                  android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/english"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
 
-                  <ImageView
-                      android:id="@+id/flag_3"
-                      android:layout_width="48dp"
-                      android:layout_height="48dp"
-                      android:src="@drawable/spain" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/french_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="center_vertical"
-                      android:layout_marginStart="10dp"
-                      android:fontFamily="@font/arimo"
-                      android:text="@string/spanish"
-                      android:textColor="@color/white"
-                      android:textSize="18sp" />
-              </LinearLayout>
+                <ImageView
+                    android:id="@+id/french_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/france" />
 
-              <ImageView
-                  android:id="@+id/default_theme2"
-                  android:layout_width="match_parent"
-                  android:layout_height="50dp"
-                  android:layout_margin="10dp"
-                  android:orientation="vertical"
-                  android:src="@drawable/ic_hexnow"
-                  app:tint="@color/purple_500"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/french"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
 
-                  />
-          </RelativeLayout>
+            </LinearLayout>
 
-      </LinearLayout>
-    </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/hindi_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/hindi_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/india" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/hindi"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/portuguese_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/portuguese_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/portugal" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/portuguese"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/spanish_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/spanish_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/spain" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/spanish"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/urdu_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/urdu_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/pakistan" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/urdu"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="40dp"
-        android:layout_alignParentBottom="true"
-
-        >
-    <RelativeLayout
-        android:id="@+id/close_container"
+        android:id="@+id/exit_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/hexagon"
             android:layout_centerInParent="true"
-            app:tint="@color/white"
-            />
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/hexagon"
+            app:tint="@color/white" />
+
         <ImageView
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            app:tint="@color/black"
-            android:src="@drawable/ic_baseline_close_24"/>
-
-    </RelativeLayout>
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_baseline_close_24"
+            app:tint="@color/black" />
     </RelativeLayout>
 </RelativeLayout>
