--- a/app/src/main/res/layout-h720dp/languages_dialog.xml
+++ b/app/src/main/res/layout-h720dp/languages_dialog.xml
@@ -4,22 +4,22 @@
     android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:alpha="0.8"
+    android:background="@color/black">
 
-    <RelativeLayout
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.8"
-        android:background="@color/black"></RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent">
+        android:layout_marginBottom="20dp"
+        android:layout_below="@id/exit_container"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:gravity="center|top"
             android:orientation="vertical">
 
             <TextView
@@ -33,167 +33,257 @@
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <RelativeLayout
+            <LinearLayout
+                android:id="@+id/arabic_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/arab_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/arab" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/arabic"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/english_language"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:elevation="5dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/flag"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/united_kingdom" />
-
-
-                    <TextView
-                        android:id="@+id/theme_txt_default"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:fontFamily="@font/arimo"
-                        android:text="@string/english"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-                </LinearLayout>
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical"
-                    android:src="@drawable/ic_hexnow"
-                    app:tint="@color/purple_500"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/united_kingdom" />
 
-                    />
-            </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/english"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
 
-            <RelativeLayout
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/french_language"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:elevation="5dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/flag_2"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/france" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:fontFamily="@font/arimo"
-                        android:text="@string/french"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-                </LinearLayout>
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/default_theme"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical"
-                    android:src="@drawable/ic_hexnow"
-                    app:tint="@color/purple_500"
+                    android:id="@+id/french_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/france" />
 
-                    />
-            </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/french"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
 
-            <RelativeLayout
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/hindi_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/hindi_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/india" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/hindi"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/portuguese_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/portuguese_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/portugal" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/portuguese"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/spanish_language"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:elevation="5dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/flag_3"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/spain" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="@font/arimo"
-                        android:text="@string/spanish"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-                </LinearLayout>
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/default_theme2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical"
-                    android:src="@drawable/ic_hexnow"
-                    app:tint="@color/purple_500"
+                    android:id="@+id/spanish_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/spain" />
 
-                    />
-            </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/spanish"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/urdu_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/urdu_flag"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/pakistan" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/urdu"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
-    </RelativeLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:id="@+id/exit_container"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:paddingBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true">
 
-        >
-
-        <RelativeLayout
-            android:id="@+id/close_container"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp">
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/hexagon"
+            app:tint="@color/white" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/hexagon"
-                app:tint="@color/white" />
-
-            <ImageView
-                android:id="@+id/close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_baseline_close_24"
-                app:tint="@color/black" />
-
-        </RelativeLayout>
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_baseline_close_24"
+            app:tint="@color/black" />
     </RelativeLayout>
 </RelativeLayout>
